# twinkle

./: .gitignore  Dockerfile  INSTALL_CLIENT.ps1  INSTALL_CLIENT.sh  INSTALL_MEGATRON.sh  README.md  README_ZH.md  pyproject.toml
client_tools/: client_generator.py
cookbook/client/twinkle/: grpo.py  sample.py  self_congnition.py
cookbook/megatron/: tp.py
cookbook/megatron/ascend/: tp_moe_cp_npu.py  tp_moe_cp_npu.sh  tp_moe_npu.py  tp_moe_npu.sh  tp_npu.py  tp_npu.sh
cookbook/ray/: single_controller.py
cookbook/rl/: grpo.py  grpo_mm.py
cookbook/transformers/: ep_fsdp_qwen3_moe.py  fsdp2.py  sp_fsdp_dense.py
docs/source_en/Usage Guide/: Introduction-with-Qwen3.5.md  NPU-Support.md  Quick-Start.md  Train-as-a-Service.md
docs/source_zh/使用指引/: NPU的支持.md  Qwen3.5最佳实践.md  快速开始.md  训练服务.md
src/twinkle/: version.py
src/twinkle/checkpoint_engine/: base.py  manager.py
src/twinkle/data_format/: message.py  sampling.py  trajectory.py
src/twinkle/dataloader/: dataloader.py  device_mesh_sampler.py  retry_sampler.py
src/twinkle/dataset/: base.py  lazy_dataset.py
src/twinkle/model/: base.py  multi_lora.py
src/twinkle/patch/: base.py  gdn_padding_free.py
src/twinkle/preprocessor/: __init__.py  llm.py  olympiad_bench.py
src/twinkle/processor/: base.py
src/twinkle/reward/: __init__.py  gsm8k.py  olympiad_bench.py
src/twinkle/sampler/: __init__.py  base.py
src/twinkle/server/: __main__.py
src/twinkle/template/: base.py  (+2 more)
tests/dataloader/: test_dataloader.py  test_sampler.py
tests/dataset/: test_loading.py
tests/moe/: test_ep_fsdp_vs_single.py
(+73 files in other folders)
