[project]
name = "twinkle-kit"
version = "0.2.dev0"
description = "Training API for large language models with efficient data handling and advanced optimization techniques."
readme = "README.md"
authors = [{ name = "ModelScope", email = "contact@modelscope.cn" }]
requires-python = ">=3.11,<3.13"
dependencies = [
  "numpy>=2.0.0,<2.3.0",
  "datasets>=3.0,<4.0",
  "omegaconf>=2.3.0,<3.0.0",
  "fastapi",
  "modelscope[framework]>=1.34.0",
  "safetensors",
  "peft>=0.11.0,<=0.19.0",
  "transformers",
]

[project.optional-dependencies]
transformers = [
  "accelerate",
  "torch>=2.6.0,<3.0.0",
  "torchvision",
]
kernels = ["kernels"]
megatron = ["megatron-core>=0.12.0", "transformer-engine[pytorch]", "mcore_bridge"]
vllm = ["vllm>=0.11"]
ray = ["ray[serve]"]
tinker = ["tinker==0.14.0"]
docs = [
  "sphinx>=5.3.0,<6.0.0",
  "docutils>=0.16.0,<0.17.0",
  "myst_parser",
  "recommonmark",
  "sphinx-book-theme",
  "sphinx-copybutton",
  "sphinx-rtd-theme",
  "sphinx_markdown_tables",
  "sphinxcontrib-mermaid",
]

[tool.poetry]
packages = [
  { include = "twinkle", from = "src" },
  { include = "twinkle_client", from = "src" },
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
